--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tippy.js/react": "^3.1.1",
     "material-icons": "^0.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
