--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@tippy.js/react": "^3.1.1",
     "material-icons": "^0.3.1",
+    "micromodal": "^0.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
