--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "@tippy.js/react": "^3.1.1",
+    "axios": "^0.19.0",
     "material-icons": "^0.3.1",
+    "md5": "^2.2.1",
     "micromodal": "^0.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
+    "react-intl-universal": "^2.2.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
