--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@tippy.js/react": "^3.1.1",
     "apexcharts": "^3.10.1",
     "axios": "^0.19.0",
+    "emoji-mart": "^3.0.0",
     "hh-mm-ss": "^1.2.0",
     "material-icons": "^0.3.1",
     "md5": "^2.2.1",
@@ -25,6 +26,7 @@
   },
   "scripts": {
     "start": "HTTPS=true react-scripts start",
+    "genium": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
