--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-apexcharts": "^1.3.3",
     "react-dom": "^16.12.0",
     "react-intl-universal": "^2.2.2",
+    "react-map-gl": "^5.2.5",
+    "react-modal-image": "^2.5.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
